update dependencies and improve code quality